deployments/sample-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello
        backend:
          serviceName: sample-service
          servicePort: 8090
